# zumar

./: .gitignore  Cargo.toml  Ower Status  README.ar.md  README.md  ROADMAP.md  The Workspace  The Workspace.txt
bridge/: Cargo.toml
core/: Cargo.toml
core/injection/: diagnose_weights.py  distill_from_llama.py  distill_knowledge_candle.py  distill_to_zumar.py  fast_distill.py  generate_weights.py  get_tokenizer.py  smart_distill_all.py  true_distill.py  universal_distill.py
core/src/: config.rs  data.rs  distill.rs  generate_weights.py  kv_cache.rs  loader.rs  main.rs  rag.rs  tokenizer.rs  train.rs  true_distill.rs
core/src/kernels/: bitnet_kernel.cu  mod.rs
core/src/layers/: attention.rs  bitlinear.rs  inspector.rs  mamba.rs  mod.rs  moe.rs  moe_router.rs  snn.rs  zumar_block.rs
data/: english.txt
models/zumar-v1/: zumar_config.json
zumar-bridge/: Cargo.toml
zumar-bridge/src/: main.rs
zumar-core/: Cargo.toml  build.rs
zumar-core/src/: config.rs  kv_cache.rs  loader.rs  main.rs  routing.rs  tokenizer.rs  train.rs
zumar-core/src/kernel/: bitnet_kernel.cu
zumar-core/src/kernels/: mod.rs
zumar-core/src/layers/: bitlinear.rs  mamba.rs  mod.rs  moe.rs  packing.rs
zumar-desktop/: Cargo.toml
