[package]
name = "zumar-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
zumar-core = { path = "../zumar-core" }
axum = "0.7"         # خادم الويب السريع
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { workspace = true }
